fixed infinite scroll overflow bug

--- a/app/globals.css
+++ b/app/globals.css
@@ -41,8 +41,9 @@ body {
 
 .main{
   margin-bottom: 10vh;
-  height: 10vh;
+  height: 30vh;
   position: relative;
+  overflow: hidden;
 }
 
 .sliderContainer{
